Update build program